--- a/WachatCustomize/lib_framework/src/main/AndroidManifest.xml
+++ b/WachatCustomize/lib_framework/src/main/AndroidManifest.xml
@@ -1,8 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.xuwei.framework">
+    package="com.xuwei.framework">
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" /> <!-- 震动权限 -->
     <uses-feature android:name="android.hardware.camera" /> <!-- 使用照相机权限 -->
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
+    <application>
+        <receiver
+            android:name="com.xuwei.wachatcustomize.main.MyReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+    </application>
+
 </manifest>
